# nussoc-genai-capstone-V2

./: .gitignore  README.md  Weeks 13 and 14 - Capstone Project Part 6 (Low Kai Hon).ipynb  gpt-4o-best-practices.md  new_langchain_langgraph.md  nus_genai_capstone.ipynb  pyproject.toml
