[project]
name = "nussoc-genai-capstone-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.2",
    "replicate>=1.0.7",
    "pymupdf>=1.24.0",
    "chromadb>=0.5.0",
]
