[project]
name = "nussoc-genai-capstone-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.2",
    "langchain-classic>=1.0.0",
    "langgraph>=1.0.0",
    "replicate>=1.0.7",
    "pymupdf>=1.24.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "pillow>=11.0.0",
]
